# justctf-2022

./: README.md
challenges/crypto_frosty/: README.md
challenges/crypto_frosty/private/: Description.md  Dockerfile  Readme.md  metadata.json  requirements.txt  run.sh
challenges/crypto_simply_powered/private/: Description.md  Readme.md  metadata.json  run.sh
challenges/crypto_very_frosty/: README.md
challenges/crypto_very_frosty/private/: Description.md  metadata.json  run.sh
challenges/misc_bifurcation/private/: Description.md  Readme.md  metadata.json  run.sh
challenges/misc_radio_ga_ga/: README.md
challenges/misc_radio_ga_ga/private/: Description.md  Readme.md  metadata.json
challenges/misc_sanity-check/private/: README.md  metadata.json
challenges/misc_screen/: README.md
challenges/misc_screen/private/: Description.md  metadata.json
challenges/misc_test-server/: README.md
challenges/pwn_arm/: README.md
challenges/pwn_darksols/: README.md
challenges/pwn_dumpme/: README.md
challenges/pwn_herpetology/: README.md
challenges/pwn_lol/: README.md
challenges/pwn_notes/: README.md
challenges/pwn_skilltest/: README.md
challenges/re_amxx/: README.md
challenges/re_im-slow/: README.md
challenges/re_im-slow/private/src/test/: CMakeLists.txt  funcs_test.cpp
challenges/re_monsters/: README.md
challenges/web_baby-xsleak/: README.md
challenges/web_css/: README.md
challenges/web_foreigner/: README.md
challenges/web_gitara/: README.md
challenges/web_gobucket/: README.md
challenges/web_jschall/: README.md
(+288 files in other folders)
